cabal-version: 3.0
name: marlowe-runtime-web
version: 0.0.1
synopsis:
  Web server for Marlowe Runtime on Cardano.
bug-reports: https://github.com/input-output-hk/marlowe-cardano/issues
license: Apache-2.0
author: Jamie Bertram
maintainer: jamie.bertram@iohk.io
stability: experimental
category: Language
license-files:
  LICENSE
  NOTICE

source-repository head
  type: git
  location: https://github.com/input-output-hk/marlowe-cardano
  subdir: marlowe-runtime-web

common lang
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TupleSections
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import: lang
  hs-source-dirs: src
  visibility: public
  exposed-modules:
    Language.Marlowe.Runtime.Web
    Language.Marlowe.Runtime.Web.Client
  other-modules:
    Language.Marlowe.Runtime.Web.API
    Language.Marlowe.Runtime.Web.Types
    Language.Marlowe.Runtime.Web.Orphans
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , base16
    , bytestring
    , containers
    , lens
    , marlowe-cardano
    , mtl
    , network-uri
    , openapi3
    , parsec
    , servant
    , servant-client
    , servant-pagination
    , servant-server
    , text
    , time

library server
  import: lang
  hs-source-dirs: server
  visibility: public
  exposed-modules:
    Language.Marlowe.Runtime.Web.Server
    Language.Marlowe.Runtime.Web.Server.DTO
    Language.Marlowe.Runtime.Web.Server.Util
  other-modules:
    Language.Marlowe.Runtime.Web.Server.Monad
    Language.Marlowe.Runtime.Web.Server.OpenAPI
    Language.Marlowe.Runtime.Web.Server.REST
    Language.Marlowe.Runtime.Web.Server.REST.ApiError
    Language.Marlowe.Runtime.Web.Server.REST.Contracts
    Language.Marlowe.Runtime.Web.Server.REST.Transactions
    Language.Marlowe.Runtime.Web.Server.REST.Withdrawals
    Language.Marlowe.Runtime.Web.Server.SyncClient
    Language.Marlowe.Runtime.Web.Server.TxClient
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , async
    , async-components
    , cardano-api
    , containers
    , errors
    , eventuo11y ^>= { 0.9, 0.10 }
    , eventuo11y-dsl ^>= { 0.2 }
    , eventuo11y-json ^>= { 0.3 }
    , eventuo11y-batteries ^>= { 0.4 }
    , exceptions
    , general-allocate ^>= { 0.2 }
    , http-media
    , lens
    , marlowe-cardano
    , marlowe-protocols
    , marlowe-runtime-web
    , marlowe-runtime
    , marlowe-runtime:discovery-api
    , marlowe-runtime:proxy-api
    , marlowe-runtime:sync-api
    , marlowe-runtime:tx-api
    , marlowe-chain-sync
    , monad-control
    , mtl
    , openapi3
    , servant
    , servant-server
    , servant-openapi3
    , servant-pagination
    , stm
    , stm-delay
    , text
    , time
    , transformers
    , transformers-base
    , unliftio-core ^>= { 0.2 }
    , wai
    , wai-cors

executable marlowe-web-server
  import: lang
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    Options
    Paths_marlowe_runtime_web
  autogen-modules:
    Paths_marlowe_runtime_web
  build-depends:
      base >= 4.9 && < 5
    , async-components
    , eventuo11y-json ^>= { 0.3 }
    , marlowe-client
    , marlowe-runtime-web:server
    , marlowe-runtime:config
    , mtl
    , network
    , optparse-applicative
    , warp
  ghc-options: -threaded

test-suite marlowe-runtime-web-test
  import: lang
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Paths_marlowe_runtime_web
  build-depends:
      base >= 4.9 && < 5
    , QuickCheck
    , aeson
    , bytestring
    , hspec
    , marlowe-cardano
    , marlowe-runtime-web
    , marlowe-test
    , network-arbitrary
    , openapi3
    , quickcheck-instances
    , regex-posix
    , servant-openapi3
    , text
  ghc-options: -threaded
