cabal-version: 3.4
name:          marlowe-runtime-web
version:       1.0.0
synopsis:      Web server for Marlowe Runtime on Cardano.
bug-reports:   https://github.com/input-output-hk/marlowe-cardano/issues
license:       Apache-2.0
author:        Jamie Bertram
maintainer:    jamie.bertram@iohk.io
stability:     experimental
category:      Language
license-files:
  LICENSE
  NOTICE

data-files:    .golden/OpenApi/golden

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marlowe-cardano
  subdir:   marlowe-runtime-web

common lang
  default-language:   Haskell2010
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  hs-source-dirs:  src
  visibility:      public
  exposed-modules:
    Language.Marlowe.Runtime.Web.Adapter.ByteString
    Language.Marlowe.Runtime.Web.Adapter.CommaList
    Language.Marlowe.Runtime.Web.Adapter.Links
    Language.Marlowe.Runtime.Web.Adapter.Pagination
    Language.Marlowe.Runtime.Web.Adapter.Servant
    Language.Marlowe.Runtime.Web.Adapter.Server.ApiError
    Language.Marlowe.Runtime.Web.Adapter.Server.ContractClient
    Language.Marlowe.Runtime.Web.Adapter.Server.DTO
    Language.Marlowe.Runtime.Web.Adapter.Server.Monad
    Language.Marlowe.Runtime.Web.Adapter.Server.SyncClient
    Language.Marlowe.Runtime.Web.Adapter.Server.TxClient
    Language.Marlowe.Runtime.Web.Adapter.Server.Util
    Language.Marlowe.Runtime.Web.Adapter.URI
    Language.Marlowe.Runtime.Web.API
    Language.Marlowe.Runtime.Web.Client
    Language.Marlowe.Runtime.Web.Contract.API
    Language.Marlowe.Runtime.Web.Contract.Next.API
    Language.Marlowe.Runtime.Web.Contract.Next.Client
    Language.Marlowe.Runtime.Web.Contract.Next.Schema
    Language.Marlowe.Runtime.Web.Contract.Next.Server
    Language.Marlowe.Runtime.Web.Contract.Server
    Language.Marlowe.Runtime.Web.Contract.Source.Server
    Language.Marlowe.Runtime.Web.Contract.Transaction.API
    Language.Marlowe.Runtime.Web.Contract.Transaction.Client
    Language.Marlowe.Runtime.Web.Contract.Transaction.Server
    Language.Marlowe.Runtime.Web.Core.Address
    Language.Marlowe.Runtime.Web.Core.Asset
    Language.Marlowe.Runtime.Web.Core.Base16
    Language.Marlowe.Runtime.Web.Core.BlockHeader
    Language.Marlowe.Runtime.Web.Core.MarloweVersion
    Language.Marlowe.Runtime.Web.Core.Metadata
    Language.Marlowe.Runtime.Web.Core.NetworkId
    Language.Marlowe.Runtime.Web.Core.Object.Schema
    Language.Marlowe.Runtime.Web.Core.Party
    Language.Marlowe.Runtime.Web.Core.Roles
    Language.Marlowe.Runtime.Web.Core.Script
    Language.Marlowe.Runtime.Web.Core.Semantics.Schema
    Language.Marlowe.Runtime.Web.Core.Tip
    Language.Marlowe.Runtime.Web.Core.Tx
    Language.Marlowe.Runtime.Web.Payout.API
    Language.Marlowe.Runtime.Web.Payout.Server
    Language.Marlowe.Runtime.Web.Role.API
    Language.Marlowe.Runtime.Web.Role.Client
    Language.Marlowe.Runtime.Web.Role.Server
    Language.Marlowe.Runtime.Web.Role.TokenFilter
    Language.Marlowe.Runtime.Web.Server
    Language.Marlowe.Runtime.Web.Status
    Language.Marlowe.Runtime.Web.Tx.API
    Language.Marlowe.Runtime.Web.Withdrawal.API
    Language.Marlowe.Runtime.Web.Withdrawal.Server

  build-depends:
    , aeson ^>=2.2
    , async >=2.2 && <3
    , async-components ==0.1.1.0
    , base >=4.9 && <5
    , base16 ^>=0.3.2
    , bytestring >=0.10.12 && <0.12
    , cardano-api ^>=8.39.2.0
    , cardano-ledger-alonzo ^>=1.6
    , cardano-ledger-binary ^>=1.3
    , cardano-ledger-core ^>=1.10
    , co-log ^>=0.6
    , containers ^>=0.6.5
    , deepseq ^>=1.4
    , errors >=2.3 && <3
    , eventuo11y >=0.9 && <0.11
    , eventuo11y-extras ==0.1.1.0
    , exceptions >=0.10 && <0.12
    , http-media ^>=0.8
    , lens >=5.2 && <6
    , marlowe-cardano ==0.2.1.0
    , marlowe-chain-sync ==1.0.0
    , marlowe-client ==1.0.0
    , marlowe-object ==1.0.0
    , marlowe-protocols ==0.3.0.0
    , marlowe-runtime:{marlowe-runtime, contract-api, proxy-api, sync-api, tx-api} ==1.0.0
    , monad-control ^>=1
    , mtl >=2.2 && <3
    , network-uri >=2.6 && <3
    , nonempty-containers ^>=0.3.4
    , openapi3 >=3.2 && <4
    , parsec ^>=3.1.14
    , pipes ^>=4.3.16
    , plutus-ledger-api ^>=1.21
    , servant ^>=0.20
    , servant-client ^>=0.20
    , servant-client-core ^>=0.20
    , servant-openapi3 ^>=2.0
    , servant-pagination >=2.5 && <3
    , servant-pipes ^>=0.16
    , servant-server ^>=0.20
    , stm ^>=2.5
    , stm-delay ^>=0.1.1
    , text ^>=2.0
    , time >=1.9 && <2
    , transformers-base ^>=0.4
    , unliftio-core ^>=0.2
    , wai >=3.2 && <4

library server
  import:          lang
  hs-source-dirs:  server
  visibility:      public
  exposed-modules:
    Language.Marlowe.Runtime.Web.OpenAPIServer
    Language.Marlowe.Runtime.Web.RuntimeServer
    Language.Marlowe.Runtime.Web.Server.Logging

  other-modules:   Paths_marlowe_runtime_web
  build-depends:
    , aeson ^>=2.2
    , async-components ==0.1.1.0
    , base >=4.9 && <5
    , co-log ^>=0.6
    , eventuo11y >=0.9 && <0.11
    , eventuo11y-extras ==0.1.1.0
    , eventuo11y-otel
    , hs-opentelemetry-sdk
    , http-types
    , insert-ordered-containers >=0.2.5 && <0.3
    , lens >=5.2 && <6
    , lens-aeson ^>=1.2
    , marlowe-chain-sync ==1.0.0
    , marlowe-protocols ==0.3.0.0
    , marlowe-runtime-web ==1.0.0
    , marlowe-runtime:{marlowe-runtime, proxy-api, sync-api} ==1.0.0
    , mtl >=2.2 && <3
    , network
    , openapi3 >=3.2 && <4
    , servant ^>=0.20
    , servant-openapi3 ^>=2.0
    , servant-pagination >=2.5 && <3
    , servant-pipes ^>=0.16
    , servant-server ^>=0.20
    , string-conversions ^>=0.4
    , text ^>=2.0
    , unliftio-core ^>=0.2
    , wai >=3.2 && <4
    , wai-cors ^>=0.2

executable marlowe-web-server
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs
  other-modules:
    Options
    Paths_marlowe_runtime_web

  build-depends:
    , async-components ==0.1.1.0
    , base >=4.9 && <5
    , co-log ^>=0.6
    , eventuo11y >=0.9 && <0.11
    , hs-opentelemetry-sdk
    , marlowe-client
    , marlowe-runtime-web:server
    , marlowe-runtime:config
    , mtl >=2.2 && <3
    , network
    , optparse-applicative
    , unliftio ^>=0.2.1
    , warp

  ghc-options:    -threaded

test-suite marlowe-runtime-web-test
  import:         lang
  hs-source-dirs: test
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  build-depends:
    , aeson ^>=2.2
    , aeson-pretty
    , base >=4.9 && <5
    , bytestring >=0.10.12 && <0.12
    , hspec
    , hspec-golden
    , insert-ordered-containers >=0.2.5 && <0.3
    , lens >=5.2 && <6
    , marlowe-cardano ==0.2.1.0
    , marlowe-object:gen
    , marlowe-runtime-web:{marlowe-runtime-web, server}
    , marlowe-runtime:gen
    , marlowe-test
    , mtl >=2.2 && <3
    , openapi3 >=3.2 && <4
    , QuickCheck
    , quickcheck-instances
    , regex-posix
    , servant
    , servant-openapi3
    , text ^>=2.0

  ghc-options:    -threaded
