cabal-version: 3.0
name: marlowe-runtime
version: 0.0.0.0
synopsis:
  Runtime system for running Marlowe financial contracts on the Cardano Computation Layer
description:
  Runtime system for running and monitoring Marlowe financial contracts on
  Cardano. It provides query access to search for and inspect contracts,
  command access for creating and interacting with contracts, and streaming
  access for real-time updates to contracts.
bug-reports: https://github.com/input-output-hk/marlowe-cardano/issues
license: Apache-2.0
author: Jamie Bertram
maintainer: jamie.bertram@iohk.io
stability: experimental
category: Language
license-files:
  LICENSE
  NOTICE

source-repository head
  type: git
  location: https://github.com/input-output-hk/marlowe-cardano
  subdir: marlowe-runtime

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TupleSections
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
  import: lang
  hs-source-dirs:   src
  exposed-modules:
    Language.Marlowe.Runtime.Core.Api
    Language.Marlowe.Runtime.Core.ScriptRegistry
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , base16
    , binary
    , cardano-api
    , bytestring
    , containers
    , marlowe-cardano
    , marlowe-chain-sync
    , ouroboros-network
    , plutus-ledger-api
    , plutus-tx
    , text
    , time

library gen
  import: lang
  hs-source-dirs:   gen
  visibility: public
  exposed-modules:
    Language.Marlowe.Runtime.Core.Gen
    Language.Marlowe.Runtime.History.Gen
    Language.Marlowe.Runtime.Discovery.Gen
    Language.Marlowe.Runtime.Transaction.Gen
  build-depends:
      base >= 4.9 && < 5
    , QuickCheck
    , cardano-api
    , cardano-api:gen
    , hedgehog-quickcheck
    , marlowe-cardano
    , marlowe-chain-sync:gen
    , marlowe-chain-sync:plutus-compat
    , marlowe-runtime
    , marlowe-runtime:history-api
    , marlowe-runtime:discovery-api
    , marlowe-runtime:tx-api
    , marlowe-test
    , quickcheck-instances

library history-api
  import: lang
  hs-source-dirs:   history-api
  visibility: public
  exposed-modules:
    Language.Marlowe.Protocol.Sync.Client
    Language.Marlowe.Protocol.Sync.Codec
    Language.Marlowe.Protocol.Sync.Server
    Language.Marlowe.Protocol.Sync.Types
    Language.Marlowe.Runtime.History.Api
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , binary
    , bytestring
    , cardano-api
    , containers
    , errors
    , marlowe-cardano
    , marlowe-chain-sync
    , marlowe-protocols
    , marlowe-runtime
    , ouroboros-consensus
    , ouroboros-network
    , plutus-ledger-api
    , transformers
    , typed-protocols

library indexer
  import: lang
  hs-source-dirs:   indexer
  visibility: public
  exposed-modules:
    Language.Marlowe.Runtime.Indexer
    Language.Marlowe.Runtime.Indexer.ChainSeekClient
    Language.Marlowe.Runtime.Indexer.Database
    Language.Marlowe.Runtime.Indexer.Database.PostgreSQL
    Language.Marlowe.Runtime.Indexer.Database.PostgreSQL.CommitBlocks
    Language.Marlowe.Runtime.Indexer.Database.PostgreSQL.CommitRollback
    Language.Marlowe.Runtime.Indexer.Database.PostgreSQL.GetIntersectionPoints
    Language.Marlowe.Runtime.Indexer.Database.PostgreSQL.GetMarloweUTxO
    Language.Marlowe.Runtime.Indexer.Store
    Language.Marlowe.Runtime.Indexer.Types
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , async-components
    , binary
    , bytestring
    , cardano-api
    , containers
    , eventuo11y
    , eventuo11y-extras
    , hasql
    , hasql-th
    , hasql-transaction
    , marlowe-cardano
    , marlowe-chain-sync
    , marlowe-protocols
    , marlowe-runtime
    , marlowe-runtime:history-api
    , mtl
    , nonempty-containers
    , plutus-ledger-api
    , stm
    , text
    , time
    , transformers
    , witherable
    , vector
  visibility: public

library sync-api
  import: lang
  hs-source-dirs:   sync-api
  visibility: public
  exposed-modules:
    Language.Marlowe.Protocol.Query.Client
    Language.Marlowe.Protocol.Query.Codec
    Language.Marlowe.Protocol.Query.Server
    Language.Marlowe.Protocol.Query.Types
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , binary
    , bytestring
    , containers
    , lifted-async
    , marlowe-chain-sync
    , marlowe-protocols
    , marlowe-runtime
    , marlowe-runtime:discovery-api
    , monad-control
    , transformers
    , transformers-base
    , typed-protocols
  visibility: public

library sync
  import: lang
  hs-source-dirs:   sync
  visibility: public
  exposed-modules:
    Language.Marlowe.Runtime.Sync
    Language.Marlowe.Runtime.Sync.Database
    Language.Marlowe.Runtime.Sync.Database.PostgreSQL
    Language.Marlowe.Runtime.Sync.Database.PostgreSQL.GetContractState
    Language.Marlowe.Runtime.Sync.Database.PostgreSQL.GetCreateStep
    Language.Marlowe.Runtime.Sync.Database.PostgreSQL.GetHeaders
    Language.Marlowe.Runtime.Sync.Database.PostgreSQL.GetIntersection
    Language.Marlowe.Runtime.Sync.Database.PostgreSQL.GetIntersectionForContract
    Language.Marlowe.Runtime.Sync.Database.PostgreSQL.GetNextHeaders
    Language.Marlowe.Runtime.Sync.Database.PostgreSQL.GetNextSteps
    Language.Marlowe.Runtime.Sync.Database.PostgreSQL.GetTip
    Language.Marlowe.Runtime.Sync.Database.PostgreSQL.GetTipForContract
    Language.Marlowe.Runtime.Sync.Database.PostgreSQL.GetTransaction
    Language.Marlowe.Runtime.Sync.Database.PostgreSQL.GetTransactions
    Language.Marlowe.Runtime.Sync.MarloweHeaderSyncServer
    Language.Marlowe.Runtime.Sync.MarloweSyncServer
    Language.Marlowe.Runtime.Sync.QueryServer
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , async-components
    , binary
    , bytestring
    , containers
    , eventuo11y
    , eventuo11y-extras
    , foldl
    , hasql
    , hasql-th
    , hasql-transaction
    , marlowe-cardano
    , marlowe-chain-sync
    , marlowe-protocols
    , marlowe-runtime
    , marlowe-runtime:discovery-api
    , marlowe-runtime:history-api
    , marlowe-runtime:sync-api
    , plutus-ledger-api
    , text
    , time
    , transformers
    , vector
    , witherable
  visibility: public

library history
  import: lang
  hs-source-dirs:   history
  visibility: public
  exposed-modules:
    Language.Marlowe.Runtime.History
    Language.Marlowe.Runtime.History.Follower
    Language.Marlowe.Runtime.History.FollowerSupervisor
    Language.Marlowe.Runtime.History.JobServer
    Language.Marlowe.Runtime.History.QueryServer
    Language.Marlowe.Runtime.History.Store
    Language.Marlowe.Runtime.History.Store.Memory
    Language.Marlowe.Runtime.History.Store.Model
    Language.Marlowe.Runtime.History.SyncServer
  build-depends:
      base >= 4.9 && < 5
    , async
    , async-components
    , cardano-api
    , containers
    , marlowe-chain-sync
    , marlowe-protocols
    , marlowe-runtime
    , marlowe-runtime:history-api
    , semialign
    , stm
    , these
    , transformers
    , witherable
  visibility: public

library discovery-api
  import: lang
  hs-source-dirs:   discovery-api
  visibility: public
  exposed-modules:
    Language.Marlowe.Protocol.HeaderSync.Client
    Language.Marlowe.Protocol.HeaderSync.Codec
    Language.Marlowe.Protocol.HeaderSync.Server
    Language.Marlowe.Protocol.HeaderSync.Types
    Language.Marlowe.Runtime.Discovery.Api
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , binary
    , bytestring
    , marlowe-chain-sync
    , marlowe-protocols
    , marlowe-runtime
    , typed-protocols

library discovery
  import: lang
  hs-source-dirs:   discovery
  visibility: public
  exposed-modules:
    Language.Marlowe.Runtime.Discovery
    Language.Marlowe.Runtime.Discovery.Chain
    Language.Marlowe.Runtime.Discovery.Store
    Language.Marlowe.Runtime.Discovery.QueryServer
    Language.Marlowe.Runtime.Discovery.SyncServer
  build-depends:
      base >= 4.9 && < 5
    , async-components
    , containers
    , marlowe-cardano
    , marlowe-chain-sync
    , marlowe-protocols
    , marlowe-runtime
    , marlowe-runtime:discovery-api
    , plutus-ledger-api
    , plutus-tx
    , semialign
    , stm
  visibility: public

library tx-api
  import: lang
  hs-source-dirs:   tx-api
  visibility: public
  exposed-modules:
    Language.Marlowe.Runtime.Transaction.Api
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , binary
    , cardano-api
    , bytestring
    , containers
    , marlowe-chain-sync
    , marlowe-protocols
    , marlowe-runtime
    , marlowe-runtime:history-api
    , time

library tx
  import: lang
  hs-source-dirs:   tx
  visibility: public
  exposed-modules:
    Language.Marlowe.Runtime.Transaction
    Language.Marlowe.Runtime.Transaction.BuildConstraints
    Language.Marlowe.Runtime.Transaction.Chain
    Language.Marlowe.Runtime.Transaction.Constraints
    Language.Marlowe.Runtime.Transaction.Query
    Language.Marlowe.Runtime.Transaction.Server
    Language.Marlowe.Runtime.Transaction.Submit
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , async
    , async-components
    , cardano-api
    , cardano-ledger-core
    , containers
    , errors
    , eventuo11y
    , eventuo11y-extras
    , marlowe-cardano
    , marlowe-chain-sync
    , marlowe-chain-sync:plutus-compat
    , marlowe-protocols
    , marlowe-runtime
    , marlowe-runtime:history-api
    , marlowe-runtime:plutus-scripts
    , marlowe-runtime:tx-api
    , ouroboros-consensus
    , ouroboros-network
    , plutus-ledger-api
    , plutus-tx
    , semialign
    , stm
    , text
    , time
    , transformers
    , witherable
  visibility: public

library plutus-scripts
  import: lang
  hs-source-dirs:   plutus-scripts
  visibility: public
  -- Needed to suppress the erroneous warning about plutus-tx-plugin not being
  -- needed.
  ghc-options: -Wno-unused-packages
  exposed-modules:
    Language.Marlowe.Runtime.Plutus.V2.Scripts.MarloweV1.RoleTokensPolicy
    Language.Marlowe.Runtime.Plutus.V2.Scripts.MarloweV1.RoleTokensPolicy.Types
  build-depends:
      base >= 4.9 && < 5
    , newtype-generics
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin

library config
  import: lang
  hs-source-dirs: config
  visibility: public
  exposed-modules:
    Language.Marlowe.Runtime.CLI.Option
  build-depends:
      base >= 4.9 && < 5
    , marlowe-chain-sync
    , network
    , marlowe-runtime
    , optparse-applicative
    , text
    , split

library web
  import: lang
  hs-source-dirs: web
  visibility: public
  exposed-modules:
    Language.Marlowe.Runtime.Web
    Language.Marlowe.Runtime.Web.Client
  other-modules:
    Language.Marlowe.Runtime.Web.API
    Language.Marlowe.Runtime.Web.Types
    Language.Marlowe.Runtime.Web.Orphans
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , base16
    , bytestring
    , containers
    , lens
    , marlowe-cardano
    , network-uri
    , openapi3
    , parsec
    , servant
    , servant-client
    , servant-pagination
    , servant-server
    , text
    , time

library web-server
  import: lang
  hs-source-dirs: web-server
  visibility: public
  exposed-modules:
    Language.Marlowe.Runtime.Web.Server
    Language.Marlowe.Runtime.Web.Server.Util
  other-modules:
    Language.Marlowe.Runtime.Web.Server.DTO
    Language.Marlowe.Runtime.Web.Server.Monad
    Language.Marlowe.Runtime.Web.Server.OpenAPI
    Language.Marlowe.Runtime.Web.Server.REST
    Language.Marlowe.Runtime.Web.Server.REST.Contracts
    Language.Marlowe.Runtime.Web.Server.REST.Transactions
    Language.Marlowe.Runtime.Web.Server.SyncClient
    Language.Marlowe.Runtime.Web.Server.TxClient
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , async
    , async-components
    , cardano-api
    , containers
    , errors
    , eventuo11y
    , eventuo11y-dsl
    , eventuo11y-json
    , eventuo11y-batteries
    , exceptions
    , lens
    , marlowe-cardano
    , marlowe-protocols
    , marlowe-runtime:web
    , marlowe-runtime
    , marlowe-runtime:discovery-api
    , marlowe-runtime:sync-api
    , marlowe-runtime:tx-api
    , marlowe-chain-sync
    , monad-control
    , mtl
    , openapi3
    , servant
    , servant-server
    , servant-openapi3
    , servant-pagination
    , stm
    , stm-delay
    , text
    , time
    , transformers
    , transformers-base
    , wai
    , wai-cors

executable marlowe
  import: lang
  hs-source-dirs: cli
  main-is: Main.hs
  other-modules:
    Language.Marlowe.Runtime.CLI.Command
    Language.Marlowe.Runtime.CLI.Command.Apply
    Language.Marlowe.Runtime.CLI.Command.Create
    Language.Marlowe.Runtime.CLI.Command.Log
    Language.Marlowe.Runtime.CLI.Command.Submit
    Language.Marlowe.Runtime.CLI.Command.Tx
    Language.Marlowe.Runtime.CLI.Command.Withdraw
    Language.Marlowe.Runtime.CLI.Env
    Language.Marlowe.Runtime.CLI.Monad
    Paths_marlowe_runtime
  autogen-modules:
    Paths_marlowe_runtime
  build-depends:
      aeson
    , base >= 4.9 && < 5
    , ansi-terminal
    , base16
    , bytestring
    , cardano-api
    , containers
    , errors
    , marlowe-cardano
    , marlowe-chain-sync
    , marlowe-protocols
    , marlowe-runtime
    , marlowe-runtime:config
    , marlowe-runtime:tx-api
    , marlowe-runtime:history-api
    , monad-control
    , network
    , plutus-ledger-api
    , transformers
    , transformers-base
    , typed-protocols
    , optparse-applicative
    , stm
    , stm-delay
    , text
    , time
    , wl-pprint
    , yaml
  if !os(windows)
    build-depends: unix

executable marlowe-indexer
  import: lang
  hs-source-dirs:   marlowe-indexer
  main-is: Main.hs
  other-modules:
    Logging
    Paths_marlowe_runtime
  autogen-modules:
    Paths_marlowe_runtime
  build-depends:
      base >= 4.9 && < 5
    , async-components
    , eventuo11y
    , eventuo11y-extras
    , hasql
    , hasql-pool
    , marlowe-chain-sync
    , marlowe-protocols
    , marlowe-runtime
    , marlowe-runtime:indexer
    , network
    , nonempty-containers
    , optparse-applicative
    , text
    , time
    , uuid
  ghc-options: -threaded

executable marlowe-sync
  import: lang
  hs-source-dirs:   marlowe-sync
  main-is: Main.hs
  other-modules:
    Logging
    Paths_marlowe_runtime
  autogen-modules:
    Paths_marlowe_runtime
  build-depends:
      base >= 4.9 && < 5
    , async-components
    , eventuo11y
    , eventuo11y-extras
    , hasql
    , hasql-pool
    , marlowe-protocols
    , marlowe-runtime:discovery-api
    , marlowe-runtime:history-api
    , marlowe-runtime:sync
    , marlowe-runtime:sync-api
    , network
    , optparse-applicative
    , text
    , time
    , uuid
  ghc-options: -threaded

executable marlowe-history
  import: lang
  hs-source-dirs:   marlowe-history
  main-is: Main.hs
  other-modules:
    Logging
    Paths_marlowe_runtime
  autogen-modules:
    Paths_marlowe_runtime
  build-depends:
      base >= 4.9 && < 5
    , async-components
    , eventuo11y
    , eventuo11y-extras
    , marlowe-chain-sync
    , marlowe-protocols
    , marlowe-runtime:history
    , marlowe-runtime:history-api
    , network
    , optparse-applicative
    , stm
    , text
    , uuid
  ghc-options: -threaded

executable marlowe-discovery
  import: lang
  hs-source-dirs:   marlowe-discovery
  main-is: Main.hs
  other-modules:
    Logging
    Paths_marlowe_runtime
  autogen-modules:
    Paths_marlowe_runtime
  build-depends:
      base >= 4.9 && < 5
    , async-components
    , eventuo11y
    , eventuo11y-extras
    , marlowe-chain-sync
    , marlowe-protocols
    , marlowe-runtime
    , marlowe-runtime:discovery
    , marlowe-runtime:discovery-api
    , network
    , optparse-applicative
    , text
    , uuid
  ghc-options: -threaded

executable marlowe-tx
  import: lang
  hs-source-dirs:   marlowe-tx
  main-is: Main.hs
  other-modules:
    Logging
    Paths_marlowe_runtime
  autogen-modules:
    Paths_marlowe_runtime
  build-depends:
    base >= 4.9 && < 5
    , async-components
    , eventuo11y
    , eventuo11y-extras
    , marlowe-chain-sync
    , marlowe-protocols
    , marlowe-runtime
    , marlowe-runtime:history-api
    , marlowe-runtime:tx
    , marlowe-runtime:tx-api
    , network
    , optparse-applicative
    , text
    , uuid
  ghc-options: -threaded

executable marlowe-web-server
  import: lang
  hs-source-dirs: web-server-app
  main-is: Main.hs
  other-modules:
    Options
    Paths_marlowe_runtime
  autogen-modules:
    Paths_marlowe_runtime
  build-depends:
      base >= 4.9 && < 5
    , async-components
    , eventuo11y-json
    , marlowe-protocols
    , marlowe-runtime:config
    , marlowe-runtime:web-server
    , marlowe-runtime:sync-api
    , network
    , optparse-applicative
    , warp
  ghc-options: -threaded

test-suite marlowe-runtime-test
  import: lang
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Language.Marlowe.Runtime.Core.ScriptRegistrySpec
    Language.Marlowe.Runtime.History.CommandSpec
    Language.Marlowe.Runtime.History.QuerySpec
    Language.Marlowe.Runtime.History.FollowerSpec
    Language.Marlowe.Runtime.History.Script
    Language.Marlowe.Runtime.History.StoreSpec
    Language.Marlowe.Runtime.History.Store.ModelSpec
    Language.Marlowe.Runtime.HistorySpec
    Language.Marlowe.Runtime.Discovery.QuerySpec
    Language.Marlowe.Runtime.Transaction.BuildConstraintsSpec
    Language.Marlowe.Runtime.Transaction.ConstraintsSpec
    Language.Marlowe.Runtime.Transaction.CommandSpec
    Language.Marlowe.Protocol.HeaderSyncSpec
    Language.Marlowe.Protocol.SyncSpec
    Language.Marlowe.Protocol.QuerySpec
    Paths_marlowe_runtime
  build-depends:
      base >= 4.9 && < 5
    , async
    , async-components
    , bytestring
    , cardano-api
    , cardano-api:gen
    , cardano-slotting
    , containers
    , errors
    , hedgehog-quickcheck
    , hspec
    , marlowe-cardano
    , marlowe-chain-sync
    , marlowe-chain-sync:gen
    , marlowe-chain-sync:plutus-compat
    , marlowe-protocols
    , marlowe-protocols-test
    , marlowe-runtime
    , marlowe-runtime:gen
    , marlowe-runtime:discovery-api
    , marlowe-runtime:history
    , marlowe-runtime:history-api
    , marlowe-runtime:sync-api
    , marlowe-runtime:tx
    , marlowe-runtime:tx-api
    , marlowe-test
    , ouroboros-consensus
    , plutus-tx
    , plutus-ledger-api
    , QuickCheck
    , quickcheck-instances
    , some
    , stm
    , time
    , transformers
    , tx-api
    , typed-protocols
  build-tool-depends: hspec-discover:hspec-discover
  ghc-options: -threaded

test-suite indexer-test
  import: lang
  hs-source-dirs: indexer-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Language.Marlowe.Runtime.Indexer.MarloweUTxOSpec
    Paths_marlowe_runtime
  build-depends:
      base >= 4.9 && < 5
    , cardano-api
    , containers
    , hspec
    , marlowe-cardano
    , marlowe-chain-sync
    , marlowe-chain-sync:plutus-compat
    , marlowe-runtime
    , marlowe-runtime:gen
    , marlowe-runtime:history-api
    , marlowe-runtime:indexer
    , marlowe-test
    , ouroboros-consensus
    , plutus-tx
    , QuickCheck
    , time
    , transformers
  build-tool-depends: hspec-discover:hspec-discover
  ghc-options: -threaded

test-suite web-server-test
  import: lang
  hs-source-dirs: web-server-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Paths_marlowe_runtime
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , bytestring
    , hspec
    , network-arbitrary
    , marlowe-runtime:web
    , marlowe-test
    , openapi3
    , QuickCheck
    , quickcheck-instances
    , regex-posix
    , servant-openapi3
    , text
  ghc-options: -threaded
